# Pleb-Client

./: .gitignore  Cargo.toml  README.md  build.rs
packaging/: build-deb.sh  build-flatpak.sh  build-rpm.sh
packaging/deb/: control  postinst
packaging/flatpak/: cargo-sources.json  one.pleb.PlebClient.metainfo.xml  one.pleb.PlebClient.yml
packaging/rpm/: pleb-client.spec
qml/: Main.qml
qml/components/: ComposeDialog.qml  ImageViewer.qml  NoteCard.qml  ProfileAvatar.qml  ReactionPicker.qml  Sidebar.qml  VideoPlayer.qml  ZapDialog.qml
qml/screens/: DmScreen.qml  FeedScreen.qml  LoginScreen.qml  NotificationsScreen.qml  ProfileScreen.qml  SearchScreen.qml  SettingsScreen.qml  ThreadScreen.qml
resources/: pleb-client.desktop
scripts/: install.sh  release.sh  uninstall.sh
src/: main.rs
src/bridge/: app_bridge.rs  dm_bridge.rs  feed_bridge.rs  mod.rs  notification_bridge.rs  profile_bridge.rs  search_bridge.rs
src/core/: config.rs  error.rs  mod.rs
src/nostr/: feed.rs  mod.rs  nwc.rs  relay.rs  zap.rs
