[package]
name = "pleb_client_qt"
version = "0.1.0"
edition = "2021"
description = "A Linux Nostr client using Qt/QML and cxx-qt"
license = "MIT"
authors = ["PlebOne"]
build = "build.rs"

[dependencies]
# Qt bindings
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }

# Nostr libraries
nostr = { version = "0.37", features = ["nip04", "nip44"] }
nostr-sdk = "0.37"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration and data storage
directories = "5"
toml = "0.8"

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# Crypto
rand = "0.8"

[build-dependencies]
cxx-qt-build = "0.7"
